# django_cowsay

./: README.md  db.sqlite3  manage.py  pyproject.toml
cowsayapp/: forms.py  models.py  views.py
cowsayapp/migrations/: 0001_initial.py
cowsayproject/: asgi.py  settings.py  urls.py  wsgi.py
templates/: history.html  index.html
