[tool.poetry]
name = "django_cowsay"
version = "0.1.0"
description = "SE-OCT-19-Q4- A web ascript that captures input text and displaays through cowsay utility"
authors = ["Kevin Blount <kvbchamp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
cowsay = "^2.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
